--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,41 @@
 </div>
 
 <main>
-<p>Hi, my dear friend (yes, it’s you!), welcome to my blog. This is your truly, Fudong Wang, currently work as a postdoc at UCF. My research interests include classical soliton theory ( inverse scattering, long-time asymptotics) and (currently) spectral theory of soliton/breather gases. Besides integrable system, I am also interested in complex analysis related problem, such as classic potential theory, free boundary problem and uniform algebra.</p>
+<p>Hi, my dear friend (yes, it’s you!), welcome to my blog. This is your truly, Fudong Wang, currently work as a postdoc at UCF. My research interests include classical soliton theory ( inverse scattering, long-time asymptotics) and (currently) spectral theory of <strong><a href="https://tardis.fandom.com/wiki/Soliton_gas">soliton/breather gases</a></strong>. Besides integrable system, I am also interested in complex analysis related problem, such as classic potential theory, <strong><a href="https://en.wikipedia.org/wiki/Free_boundary_problem">free boundary problem</a></strong> and uniform algebra.</p>
+<hr>
+<p><img src="https://solitongas.github.io/images/logo.png" alt="That is supposed to be me!"></p>
+<hr>
+<h4 id="current-projects">Current projects</h4>
+<ol>
+<li>Study the thermodynamic limit of densities and fluxies for the fNLS soliton/breather gases.</li>
+<li>General problem on well-posedness of the nonlinear dispersion relation for soliton/breather gases.</li>
+<li>Statistical properties of the landscape of finite-gap solutions for fNLS.</li>
+</ol>
+<hr>
+<h4 id="publications">Publications</h4>
+<ol>
+<li>
+<p>Recent developments in spectral theory of focusing NLS soliton gases (in preparing, with Alex)</p>
+</li>
+<li>
+<p>A <code>$\bar\partial$</code>-Steepest Descent Method for Oscillatory Riemann–Hilbert Problems, <em>Journal of Nonlinear Science</em> <strong>32 (1), 1-46, 2022</strong> (with Wen-Xiu Ma)</p>
+</li>
+<li>
+<p>A Note on Electrified Droplets, <em>Computational Methods and Function Theory</em>, <strong>1-27, 2021</strong> (with Nathan Hayford)</p>
+</li>
+</ol>
+<hr>
+<h4 id="talks-under-constructing">Talks (under constructing)</h4>
+<h5 id="on-graduate-math--usf">On Graduate Math @ USF</h5>
+<ol>
+<li>Oct, 2021,  The Continuum Limit of Theta Functions.</li>
+<li>March, 2021,  A short Introduction to the Theta Functions.</li>
+<li>May, 2020,  An elementary introduction to Fredholm Determinant.</li>
+<li>Mar, 2020,  Introduction to the Riemann-Hilbert Problem in <code>$L^p$</code>-space.</li>
+<li>Oct, 2019,  What is &hellip; inverse scattering?</li>
+<li>Sep, 2019,  An Introduction to the Riemann-Hilbert Problems on the real line.</li>
+<li>Jun, 2019,  Some fundamental formulas(Plemelj-Privalov) on the Cauchy-type integrals.</li>
+</ol>
 
 </main>
 
