--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@
 <main>
 <p>Hi, my dear friend (yes, it’s you!), welcome to my blog. This is your truly, Fudong Wang, currently work as a postdoc at UCF. My research interests include classical soliton theory ( inverse scattering, long-time asymptotics) and (currently) spectral theory of <strong><a href="https://tardis.fandom.com/wiki/Soliton_gas">soliton/breather gases</a></strong>. Besides integrable system, I am also interested in complex analysis related problem, such as classic potential theory, <strong><a href="https://en.wikipedia.org/wiki/Free_boundary_problem">free boundary problem</a></strong> and uniform algebra.</p>
 <hr>
-<p><img src="https://solitongas.github.io/images/logo.png" alt="That is supposed to be me!"></p>
+<p><img src="https://solitongas.github.io/images/me.jpg" alt="That is supposed to be me!"></p>
 <hr>
 <h4 id="current-projects">Current projects</h4>
 <ol>
