--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
 
 
 
-<h2 id="todo">Todo</h2>
-<ul>
-<li>Write the home page!!!!</li>
-</ul>
-<p>Under construction! Coming soon~</p>
+<h2 id="my-posts">My Posts</h2>
 
 
 <ul>
