--- a/myblog/public/about/index.html
+++ b/myblog/public/about/index.html
@@ -32,8 +32,9 @@
 </div>
 
 <main>
-<p>Hi, my dear friend (yes, it’s you!), welcome to my blog. This is your truly, Fudong Wang, currently work as a postdoc at UCF. My research interests include classical soliton theory ( inverse scattering, long-time asymptotics) and (currently) spectral theory of <strong><a href="https://tardis.fandom.com/wiki/Soliton_gas">soliton/breather gases</a></strong>. Besides integrable system, I am also interested in complex analysis related problem, such as classic potential theory, <strong><a href="https://en.wikipedia.org/wiki/Free_boundary_problem">free boundary problem</a></strong> and uniform algebra.</p>
+<p>Hi, my dear friend (yes, it’s you!), welcome to my blog. This is your truly, Fudong Wang, whom currently works as a postdoc at UCF (supervised by <strong>Alexander Tovbis</strong>). My dissertation advisor is <strong>Wen-Xiu Ma</strong>. My research interests include classical soliton theory ( inverse scattering, long-time asymptotics) and (currently) spectral theory of <strong><a href="https://tardis.fandom.com/wiki/Soliton_gas">soliton/breather gases</a></strong>. Besides integrable system, I am also interested in complex analysis related problem, such as classic potential theory, <strong><a href="https://en.wikipedia.org/wiki/Free_boundary_problem">free boundary problem</a></strong> and uniform algebra.</p>
 <hr>
+<h5 id="this-is-me-">This is me 👇</h5>
 <p><img src="https://solitongas.github.io/images/me.jpg" alt="That is supposed to be me!"></p>
 <hr>
 <h4 id="current-projects">Current projects</h4>
@@ -49,14 +50,35 @@
 <p>Recent developments in spectral theory of focusing NLS soliton gases (in preparing, with Alex)</p>
 </li>
 <li>
-<p>A <code>$\bar\partial$</code>-Steepest Descent Method for Oscillatory Riemann–Hilbert Problems, <em>Journal of Nonlinear Science</em> <strong>32 (1), 1-46, 2022</strong> (with Wen-Xiu Ma)</p>
+<p>A <code>$\bar\partial$</code>-Steepest Descent Method for Oscillatory Riemann–Hilbert Problems, <em>Journal of Nonlinear Science</em> <strong>32 (1), 1-46, 2022</strong> (with <a href="http://shell.cas.usf.edu/~wma3/">Wen-Xiu Ma</a>)</p>
 </li>
 <li>
-<p>A Note on Electrified Droplets, <em>Computational Methods and Function Theory</em>, <strong>1-27, 2021</strong> (with Nathan Hayford)</p>
+<p>A Note on Electrified Droplets, <em>Computational Methods and Function Theory</em>, <strong>1-27, 2021</strong> (with <a href="https://usfmath.github.io/author/nathan-hayford/">Nathan Hayford</a>)</p>
 </li>
 </ol>
 <hr>
 <h4 id="talks-under-constructing">Talks (under constructing)</h4>
+<h5 id="integrable-systems-and-random-matrix-theory-seminar--university-of-michigan">Integrable Systems and Random Matrix Theory Seminar @ University of Michigan}</h5>
+<ol>
+<li>Oct, 2021, A dbar-steepest descent analysis for the long-time asymptotic behavior of oscillatory Riemann-Hilbert problems</li>
+</ol>
+<h5 id="integrable-system-seminar--ucf">Integrable system seminar @ UCF</h5>
+<ol>
+<li>Aug, 2021, Continuum limit of theta functions.</li>
+<li>Jan, 2022, Integral equation of the first kind with logarithmic kernel.</li>
+</ol>
+<h5 id="differential-equations-seminar-talks--university-of-south-florida">Differential Equations Seminar Talks @ University of South Florida}</h5>
+<ol>
+<li>Sep, 2020, Derivation of the NLS equation from Maxwell&rsquo;s Equations</li>
+<li>Apr, 2020, <code>$L^2$</code>-bijectivity of scattering and inverse scattering in some Sobolev spaces.</li>
+<li>Oct, 2019, <code>$\bar{\partial}$</code> method and its application to nonlinear evolution equations.</li>
+<li>Sep, 2019, Inverse scattering and N-soliton solution for the nonlocal nonlinear Schrödinger equation.</li>
+<li>Apr, 2019, Riemann-Hilbert problems for two-component coupled mKdV systems.</li>
+<li>Mar, 2019, Asymptotic solutions of the nonlinear Schrödinger equation based on conservation laws.</li>
+<li>Oct, 2018, The emergence of solitons of the Korteweg-de Vries Equation from sufficiently decaying initial conditions.</li>
+<li>Apr, 2018, Nonlinear steepest descent method for long-time asymptotic for MKdV.</li>
+<li>Mar, 2017, Riemann-Hilbert problems with zeros.</li>
+</ol>
 <h5 id="on-graduate-math--usf">On Graduate Math @ USF</h5>
 <ol>
 <li>Oct, 2021,  The Continuum Limit of Theta Functions.</li>
@@ -67,6 +89,32 @@
 <li>Sep, 2019,  An Introduction to the Riemann-Hilbert Problems on the real line.</li>
 <li>Jun, 2019,  Some fundamental formulas(Plemelj-Privalov) on the Cauchy-type integrals.</li>
 </ol>
+<hr>
+<h4 id="teaching">Teaching</h4>
+<h5 id="as-a-grader">As a Grader</h5>
+<ol>
+<li>MAC 2283 — ENGINEERING CALCULUS III</li>
+<li>COP 4313 — SYMBOLIC COMPUTATIONS IN MATHEMATICS</li>
+<li>MAD 4401 — NUMERICAL ANALYSIS I</li>
+<li>MAA 4212 — INTERMEDIATE ANALYSIS II</li>
+<li>MAP 4341 — INTRODUCTION TO PARTIAL DIFFERENTIAL EQUATIONS</li>
+</ol>
+<h5 id="as-an-instructor">As an Instructor</h5>
+<ol>
+<li>MAS 3106  — Linear Algebra:
+<em>Concentrated on proofs, abstract linear algebra.</em></li>
+<li>MAS 3105  — Matrix and Linear Algebra: <em>Concentrated on computation side of matrix, QR decomposition, determinants, projections, least-square approximation.</em></li>
+<li>MAC 2312 — CALCULUS II: <em>Integrals, Techniques of Integration, Applications of Integration, Series.</em></li>
+</ol>
+<hr>
+<h4 id="references">References</h4>
+<ul>
+<li>Alexander Tovbis @ UCF</li>
+<li>Wen-Xiu Ma @ USF</li>
+<li>Evguenii Rakhmanov @ USF</li>
+<li>Seung-Yeop Lee @ USF</li>
+<li>Dmitry Khavinson @ USF</li>
+</ul>
 
 </main>
 
