--- a/index 2.html
+++ b/index 2.html
@@ -293,45 +293,6 @@
 
 
 
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QYEV36KEWT"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-
-  function gtag() {
-      dataLayer.push(arguments);
-  }
-
-  function trackOutboundLink(url, target) {
-    gtag('event', 'click', {
-         'event_category': 'outbound',
-         'event_label': url,
-         'transport_type': 'beacon',
-         'event_callback': function () {
-           if (target !== '_blank') {
-             document.location = url;
-           }
-         }
-    });
-    console.debug("Outbound link clicked: " + url);
-  }
-
-  function onClickCallback(event) {
-    if ((event.target.tagName !== 'A') || (event.target.host === window.location.host)) {
-      return;
-    }
-    trackOutboundLink(event.target, event.target.getAttribute('target'));  
-  }
-
-  gtag('js', new Date());
-  gtag('config', 'G-QYEV36KEWT', {});
-  gtag('set', {'cookie_flags': 'SameSite=None;Secure'});
-
-  
-  document.addEventListener('click', onClickCallback, false);
-</script>
-
-
   
 
   
@@ -1410,7 +1371,7 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>Hi, my dear friend (yes, it’s you!), welcome to my blog. This is your truly, Fudong Wang, who currently works as a postdoc at UCF (supervised by <strong>Alexander Tovbis</strong>). My dissertation mentor is <strong>Wen-Xiu Ma</strong>. My research interests include classical soliton theory ( inverse scattering, long-time asymptotics) and (currently) spectral theory of <strong><a href="https://tardis.fandom.com/wiki/Soliton_gas" target="_blank" rel="noopener">soliton/breather gases</a></strong>. Besides integrable system, I am also interested in complex analysis related problem, such as classic potential theory, <strong><a href="https://en.wikipedia.org/wiki/Free_boundary_problem" target="_blank" rel="noopener">free boundary problems</a></strong> and uniform algebra.</p>
+      <p>Hi, my dear friend (yes, it’s you!), welcome to my blog. This is your truly, Fudong Wang, whom currently works as a postdoc at UCF (supervised by <strong>Alexander Tovbis</strong>). My dissertation advisor is <strong>Wen-Xiu Ma</strong>. My research interests include classical soliton theory ( inverse scattering, long-time asymptotics) and (currently) spectral theory of <strong><a href="https://tardis.fandom.com/wiki/Soliton_gas" target="_blank" rel="noopener">soliton/breather gases</a></strong>. Besides integrable system, I am also interested in complex analysis related problem, such as classic potential theory, <strong><a href="https://en.wikipedia.org/wiki/Free_boundary_problem" target="_blank" rel="noopener">free boundary problem</a></strong> and uniform algebra.</p>
 
     </div>
 
