--- a/talk/the-continuum-limit-of-theta-functions/index.html
+++ b/talk/the-continuum-limit-of-theta-functions/index.html
@@ -1088,6 +1088,15 @@
 
   
   
+  <div class="article-widget content-widget-hr">
+    <h3>Related</h3>
+    <ul>
+      
+      <li><a href="/post/a-note-on-venakides1989-paper-about-continumm-limit-of-theta-functions/">A note on Venakides1989 paper about continuum limit of theta functions</a></li>
+      
+    </ul>
+  </div>
+  
 
 
 
