new post on dbar problem

--- a/courses/example/python/index.html
+++ b/courses/example/python/index.html
@@ -253,7 +253,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.eb409a5e58b446c0e6ae841b8f94eb2e.css" />
+  <link rel="stylesheet" href="/css/wowchemy.21aff2ab2a24a7bdccdd0a7ae1ef93c7.css" />
 
   
 
@@ -1166,6 +1166,8 @@
     
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 
+
+ <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
 
 
 
