--- a/courses/example/stats/index.html
+++ b/courses/example/stats/index.html
@@ -253,7 +253,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.eb409a5e58b446c0e6ae841b8f94eb2e.css" />
+  <link rel="stylesheet" href="/css/wowchemy.21aff2ab2a24a7bdccdd0a7ae1ef93c7.css" />
 
   
 
@@ -1158,6 +1158,8 @@ The variance of the distribution is $\sigma^{2}$.
     
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 
+
+ <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
 
 
 
