--- a/courses/example/vector-space/index.html
+++ b/courses/example/vector-space/index.html
@@ -890,12 +890,21 @@ vector space, subspace, bases, linear dependent, dimension." /><meta property="o
             <p>We are going to learn the following fudamental concepts:
 <strong>vector space, subspace, bases, linear dependent, dimension.</strong></p>
 <h2 id="lecture-notes">Lecture Notes</h2>
+<ul class="cta-group">
+  
+  <li>
+    <a href="/slides/vector-space"  class="btn btn-primary px-3 py-3">Lecture slides</a>
+  </li>
+  
+  
+</ul>
+
 <h2 id="exercises">Exercises</h2>
-<details class="spoiler "  id="spoiler-0">
+<details class="spoiler "  id="spoiler-1">
   <summary>What is the definition of subspaces?</summary>
   <p>Subspace = subset + space!</p>
 </details>
-<details class="spoiler "  id="spoiler-1">
+<details class="spoiler "  id="spoiler-2">
   <summary>What is the meaning of dimension?</summary>
   <p>Number vectors in a basis.</p>
 </details>
