--- a/README.en/index.html
+++ b/README.en/index.html
@@ -316,7 +316,17 @@
   
 </nav>
 
-
+<script type="text/x-mathjax-config">
+  MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ["\\(", "\\)"]],
+      processEscapes: true,
+    }
+  }
+</script>
+<script type="text/javascript"
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 
  </div>
     </header>
@@ -629,6 +639,17 @@ Next use <code class="highlighter-rouge">normal</code> by default. Have a previe
     </main>
 
     <footer id="footer" class="footer">
+      <script type="text/x-mathjax-config">
+        MathJax = {
+          tex: {
+            inlineMath: [['$', '$'], ["\\(", "\\)"]],
+            processEscapes: true,
+          }
+        }
+      </script>
+      <script type="text/javascript"
+          src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+      </script>
       <div class="footer-inner">
         <div class="copyright" >
   
@@ -1141,8 +1162,6 @@ Next use <code class="highlighter-rouge">normal</code> by default. Have a previe
 
 
   
-  
-
 
   
 
